# ai-center-v6

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
data/qdrant/: meta.json
doc/: 01、架构.md
doc/prd/: 2、2清欠表AI填报实现逻辑.md  2、清欠表AI填报.md  2、知识库策略.md  configuration-management-prd.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
scripts/: agentic_rag_answer.py  assess_excel_roundtrip.py  build_index.py  ingest_docs.py  init_db.py  init_hr_demo_db.py  rag_answer.py  run_video_inspect.py  search_knowledge.py  sql_agent.py
src/: __init__.py
src/api/: app.py  docling_routes.py  excel_update_routes.py  file_manager_routes.py  knowledge_routes.py  pdf_preview_routes.py  routes.py  schemas.py  tender_kb_routes.py
src/chunker/: __init__.py  chunker.py  tender_chunker.py  utils.py
src/config/: settings.py
src/db/: __init__.py  session.py
src/graphs/: __init__.py  agent.py  sql_agent.py
src/media/: excel.py  (+7 more)
tests/: test_agentic_rag_graph.py  test_agentic_rag_service.py  test_api_agentic_rag.py  test_api_files.py  test_api_ingest.py  test_api_search.py  test_api_sql_agent.py  test_api_video_inspect.py  test_api_vision_chat.py  test_chunker.py  test_embeddings.py  test_excel_update_analysis.py  test_excel_update_workflow.py  test_health.py  test_index_pipeline.py  test_llm.py  test_media_excel.py  test_media_service.py  test_media_video.py  test_parser.py  test_qdrant_store.py  test_search_service.py  test_sql_agent_service.py  test_storage_minio_client.py
(+131 files in other folders)
